# Indexed189

./: .env.example  .gitignore  README.md  disc02-mini-lecture-mathpix.md  lec01-introduction-mathpix.md  lec04-k-means-and-probability-mathpix.md  lec04-notebook.md  lec05-notebook.md  lec06-gmm-recap-linear-regression-1-mathpix.md  lec08-notebook.md  lec11-notebook.md  pyproject.toml  requirements.txt
.cursor/rules/: honcho.mdc
data/processed/: lec12.ipynb  lec13.ipynb  lec14.ipynb
docs/Math110/: aug27-processed.md  aug29-processed.md  oct1-processed.md  oct3-processed.md  oct6-processed.md  sep10-processed.md  sep12-processed.md  sep15-processed.md  sep17-processed.md  sep19-processed.md  sep22-processed.md  sep24-processed.md  sep26-processed.md  sep3-processed.md  sep5-processed.md  sep8-processed.md
docs/deep-learning/: deep-learning-pages-1-171-mathpix.md  deeplearningchapter5-mathpix.md  deeplearningchapter7-processed.md
docs/discussion-worksheets/: discussion-worksheet-01-processed.md  discussion-worksheet-02-processed.md  discussion-worksheet-03-processed.md  discussion-worksheet-04-processed.md  discussion-worksheet-05-processed.md  discussion-worksheet-06-processed.md
docs/discussions/: disc01-mini-lecture-mathpix.md  disc03-mini-lecture-mathpix.md  disc04-mini-lecture-mathpix.md  disc05-mini-lecture-mathpix.md
misc/: HONCHO_ENDPOINT_TEST_RESULTS.md  HONCHO_QUICK_REFERENCE.md
src/: annotate_with_vision.py  ingest_cli.py  mathpix_ingest.py  process_notebooks.py  remove_qr_codes.py
src/indexed189/: __init__.py  cli.py
(+14 files in other folders)
